[package]
name = "peparse"
version = "0.1.0"
edition = "2018"

[dependencies]
bytes = "1"
hex = "0.4"
bitflags = "1"
snafu = "0.6"

[dependencies.segsource]
path = "../../segsource/segsource"
#features = ["memmap", "async", "with_bytes"]
version = "0.1.0"

[dependencies.peparse-internal-macros]
path = "../macros"
version = "0.1.0"
